# Tender_Response_Automation

./: .gitignore  README.md  package-lock.json  package.json
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: agent.py  agent_manager.py
backend/app/bootstrap/: __init__.py  dependencies.py  routers.py
backend/app/core/: config.py
backend/app/db/: __init__.py  lancedb_client.py
backend/app/file_processing/: __init__.py  base.py  models.py  service.py
backend/app/repositories/: qa_repository.py
backend/app/schemas/: agent.py  history_ingest.py
backend/app/services/: csv_column_detection_service.py  csv_qa_normalization_service.py  history_ingest_service.py  qa_embedding_service.py
backend/app/shared/: __init__.py
backend/tests/agents/: test_agent.py  test_agent_manager.py
backend/tests/architecture/: test_modular_imports.py  test_no_legacy_layer_imports.py  test_no_legacy_service_imports.py
backend/tests/bootstrap/: test_routers.py
backend/tests/core/: test_lancedb_settings.py
backend/tests/db/: test_lancedb_client.py
backend/tests/e2e/: __init__.py
backend/tests/file_processing/: test_csv_column_mapping.py  test_file_processing_service.py
backend/tests/integration/: test_app_lancedb_startup.py  test_csv_history_ingest_route.py  test_tender_response_route_integration.py
backend/tests/repositories/: test_qa_repository.py
backend/tests/schemas/: test_history_ingest_csv_schema.py  test_history_ingest_schema.py
backend/tests/services/: test_csv_column_detection_service.py  test_health_service.py  (+6 more)
(+269 files in other folders)
